#16973 (fixed) Radio button misaligned in entities import modal.

--- a/webapp/app/javascript/framework/components/_form.scss
+++ b/webapp/app/javascript/framework/components/_form.scss
@@ -127,6 +127,7 @@
     cursor: pointer;
   }
 
+  input[type='radio'],
   input[type='checkbox']{
     cursor: pointer;
     vertical-align: middle;
